# govscan_streamlit

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  config.py  filtered_repositories.csv  main.py  pyproject.toml  requirements.txt
.github/workflows/: evaluate.yml  pipeline.yml  test.yml
archive/: all_gov_projects.csv
data/: pipeline_log.jsonl
data/uk_ai_policy_faiss/: index.faiss  index.pkl
pages/: 1_overview.py  2_trends.py  3_similarity.py  4_search.py  5_ask.py  6_quality.py  7_uk_ai_policy.py
pipeline/: classify.py  cluster.py  detect.py  embed.py  evaluate.py  fetch.py  query_agent.py  rag.py  rescan.py  run.py  store.py
pipeline/prompts/: classify.txt
tests/: test_classify.py  test_fetch.py  test_store.py
