[project]
name = "govscan-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "streamlit>=1.58.0",
]

[project.optional-dependencies]
pipeline = [
    "fastembed>=0.4.2",
    "mistralai>=2.4.9",
    "onnxruntime<=1.19.0",
    "pydantic>=2.13.4",
    "scikit-learn>=1.9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
