[project]
name = "govscan-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "rag-pipeline[google]",
    "streamlit>=1.58.0",
]

[project.optional-dependencies]
pipeline = [
    "fastembed>=0.4.2",
    "google-genai>=1.0.0",
    "onnxruntime<=1.19.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "scikit-learn>=1.9.0",
    "tenacity>=9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.sources]
rag-pipeline = { git = "https://github.com/plochockaa/rag_pipeline" }

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
